--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"type" : "project",
 	 "require" : {
         "php" : ">=5.6",
-        "mcustiel/phiremock": "dev-feature-verify",
+        "mcustiel/phiremock": "dev-master",
         "codeception/codeception" : ">=2.1"
     },
     "minimum-stability": "dev"
