--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
 	"name" : "mcustiel/test-phiremock",
 	"type" : "project",
 	 "require" : {
-        "php" : ">=5.6",
-        "mcustiel/phiremock": "dev-master",
-        "codeception/codeception" : ">=2.1"
+        "php" : ">=5.5",
+        "mcustiel/phiremock": "^0.8.2",
+        "codeception/codeception" : "^2.1"
     },
     "minimum-stability": "dev"
 }
