--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,13 @@
             "url": "https://github.com/mcustiel/phiremock"
         }
     ],
+    "authors" : [{
+			"name" : "Mariano Custiel",
+			"email" : "jmcustiel@gmail.com",
+			"homepage" : "https://github.com/mcustiel",
+			"role" : "Developer"
+		}
+	],
 	"autoload" : {
 		"psr-4" : {
 			"Codeception\\" : "src"
