--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -16,4 +16,5 @@ extensions:
     config:
         \Codeception\Extension\Phiremock:
             listen: 0.0.0.0:18080
+            startDelay: 1
         
