--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "php" : ">=5.5",
         "mcustiel/phiremock": "^1.1.0",
         "codeception/codeception" : "^2.0",
-        "symfony/process": "^3.1"
+        "symfony/process": "^3.1|^2.7.15"
     },
     "minimum-stability": "dev"
 }
