--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
     },
     "name" : "mcustiel/phiremock-codeception-extension",
     "type" : "project",
+    "description" : "Codeception extension for PhireMock. Allows to stub remote services for HTTP requests.",
+	"license" : "GPL-3.0+",
      "require" : {
         "php" : ">=5.5",
         "mcustiel/phiremock": "^1.3",
