--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -17,3 +17,4 @@ extensions:
         \Codeception\Extension\Phiremock:
             listen: 0.0.0.0:18080
             startDelay: 1
+            debug: true
