--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,12 @@
     "description" : "Codeception extension for PhireMock. Allows to stub remote services for HTTP requests.",
 	"license" : "GPL-3.0+",
      "require" : {
-        "php" : ">=5.5",
+        "php" : ">=5.6",
         "mcustiel/phiremock": "^1.3",
         "codeception/codeception" : "^2.0",
         "symfony/process": "^3.1|^2.7.15"
+    },
+    "suggest" : {
+        "ext-pcntl" : "Allows phiremock-codeception-extension to send system signals to phiremock process"
     }
 }
