--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,6 @@
         "php" : ">=5.6",
         "mcustiel/phiremock": "^1.7",
         "codeception/codeception" : "^2.2",
-        "symfony/process": "^3.1|^2.7.15"
+        "symfony/process": ">=2.7.15 <5.0.0"
     }
 }
