--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "name" : "Mariano Custiel",
             "email" : "jmcustiel@gmail.com",
             "homepage" : "https://github.com/mcustiel",
-            "role" : "Developer"
+            "role" : "Administrator"
         }
     ],
     "autoload" : {
@@ -28,8 +28,10 @@
     "license" : "GPL-3.0-or-later",
     "require" : {
         "php" : ">=5.6",
-        "mcustiel/phiremock": "^1.7",
         "codeception/codeception" : "^2.2",
         "symfony/process": ">=2.7.15 <5.0.0"
+    },
+    "suggests": {
+        "mcustiel/phiremock-server": "As a dev-requirement. Allows the extension to start phiremock automatically from vendor/bin"
     }
 }
