--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require" : {
         "php" : ">=5.6",
         "mcustiel/phiremock": "^1.7",
-        "codeception/codeception" : "^2.2",
+        "codeception/codeception" : "^2.2 | ^3.0",
         "symfony/process": ">=2.7.15 <5.0.0"
     }
 }
