--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,17 +1,17 @@
 filter:
-  paths: [src/*]
-  excluded_paths: [vendor/*, test/*]
+    paths: [src/*]
+    excluded_paths: [vendor/*, test/*]
 before_commands:
-  - 'composer update --prefer-source'
-checks:
-  php: true
-coding_style:
-  php: {  }
+    - 'composer install --dev --prefer-source'
 build:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
   environment:
-    php:
-      version: 5.6.9
-  tests:
-    override:
-      -
-        command: ./vendor/bin/codecept build -c tests && ./vendor/bin/codecept run acceptance -c tests
+      postgresql: false
+      mysql: false
+      redis: false
+      php:
+          version: 7.2
