--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "autoload" : {
         "psr-4" : {
-            "Codeception\\" : "src"
+            "Codeception\\Extension\\" : "src/Extension",
+            "Mcustiel\\Phiremock\\Codeception\\Extension\\": "src/PhiremockExtension"
         }
     },
     "autoload-dev": {
