--- a/codeception.yml
+++ b/codeception.yml
@@ -17,6 +17,8 @@ extensions:
         \Codeception\Extension\Phiremock:
             debug: true
             start_delay: 1
+            suites: 
+              - unit
             extra_instances:
               -
                 listen: 0.0.0.0:18080
