--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "autoload" : {
         "psr-4" : {
-            "Codeception\\" : "src"
+            "Codeception\\Extension\\" : "src/Extension",
+            "Mcustiel\\Phiremock\\Codeception\\Extension\\": "src/PhiremockExtension"
         }
     },
     "autoload-dev": {
@@ -37,12 +38,12 @@
         "symfony/process": ">=3.0.0 <6.0.0"
     },
     "require-dev": {
-        "mcustiel/phiremock-server": "^1.0",
+        "mcustiel/phiremock-server": "dev-master",
     	"codeception/module-rest": "^1.0",
         "codeception/module-phpbrowser": "^1.0",
         "guzzlehttp/guzzle" : "^7.0"
     },
-    "suggests": {
+    "suggest": {
         "mcustiel/phiremock-server": "As a dev-requirement. Allows the extension to start phiremock automatically from vendor/bin",
         "guzzlehttp/guzzle" : "Version 6 to execute phiremock-server as default"
     },
