--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,15 +3,26 @@ filter:
     excluded_paths: [vendor/*, test/*]
 before_commands:
     - 'composer install --dev --prefer-source'
+
 build:
-  nodes:
-    analysis:
-      tests:
-        override:
-          - php-scrutinizer-run
   environment:
-      postgresql: false
-      mysql: false
-      redis: false
-      php:
+    postgresql: false
+    mysql: false
+    redis: false
+  tests:
+    override:
+      - php-scrutinizer-run
+      - ./vendor/bin/codecept run
+  nodes:
+    php72:
+      environment:
+        php:
           version: 7.2
+    php73:
+      environment:
+        php:
+          version: 7.3
+    php74:
+      environment:
+        php:
+          version: 7.4
