--- a/composer.json
+++ b/composer.json
@@ -33,14 +33,14 @@
     "description" : "Codeception extension for Phiremock. Allows to stub remote services for HTTP requests.",
     "license" : "GPL-3.0-or-later",
     "require" : {
-        "php" : "^7.2|^8.0",
-        "codeception/codeception" : ">=2.2 <6.0",
-        "symfony/process": ">=3.0.0 <7.0.0"
+        "php" : "^8.0",
+        "codeception/codeception" : "^5.0",
+        "symfony/process": ">=5.0.0 <7.0.0"
     },
     "require-dev": {
         "mcustiel/phiremock-server": "^1.0",
-    	"codeception/module-rest": "^1.0",
-        "codeception/module-phpbrowser": "^1.0",
+    	"codeception/module-rest": "^3.0",
+        "codeception/module-phpbrowser": "^3.0",
         "guzzlehttp/guzzle" : "^7.0"
     },
     "suggest": {
