--- a/composer.json
+++ b/composer.json
@@ -33,19 +33,19 @@
     "description" : "Codeception extension for Phiremock. Allows to stub remote services for HTTP requests.",
     "license" : "GPL-3.0-or-later",
     "require" : {
-        "php" : "^8.2",
+        "php" : "^8.0",
         "codeception/codeception" : "^5.0",
-        "symfony/process": "^v7.0"
+        "symfony/process": ">=5.0.0 <8.0.0"
     },
     "require-dev": {
         "mcustiel/phiremock-server": "^1.0",
-    	"codeception/module-rest": "^3.0",
+        "codeception/module-rest": "^3.0",
         "codeception/module-phpbrowser": "^3.0",
         "guzzlehttp/guzzle" : "^7.0"
     },
     "suggest": {
         "mcustiel/phiremock-server": "As a dev-requirement. Allows the extension to start phiremock automatically from vendor/bin",
-        "guzzlehttp/guzzle" : "Version 7 to execute phiremock-server as default"
+        "guzzlehttp/guzzle" : "Version 6 to execute phiremock-server as default"
     },
     "prefer-stable": true
 }
