--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,8 +1,8 @@
 filter:
-    paths: [src/*]
-    excluded_paths: [vendor/*, test/*]
+  paths: [src/*]
+  excluded_paths: [vendor/*, test/*]
 before_commands:
-    - 'composer install --dev --prefer-source'
+  - "composer install --dev --prefer-source"
 
 build:
   environment:
@@ -21,7 +21,7 @@ build:
     php81:
       environment:
         php:
-          version: 8.1      
+          version: 8.1
     php82:
       environment:
         php:
@@ -29,4 +29,8 @@ build:
     php83:
       environment:
         php:
-          version: 8.3.0
+          version: 8.3
+    php84:
+      environment:
+        php:
+          version: 8.4
